# django-spaces-notifications

./: README.md  setup.cfg
spaces_notifications/: __init__.py  apps.py  forms.py  mixins.py  utils.py
spaces_notifications/static/spaces_notifications/js/: n12n.js
spaces_notifications/templates/pinax/notifications/: email_body.txt  notice_settings.html
spaces_notifications/templates/spaces_notifications/: form.html  form_field.html
spaces_notifications/templatetags/: n12n_tags.py
