[metadata]
name = django_spaces_notifications
author = Mattes Sarcander
description = Provides email notification support for Django Collab platform apps.
version = 0.1
url = https:///github.com/Fortschritt/django-spaces-notifications
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4